added garbage collector configs